# qsim

./: .gitignore  CMakeLists.txt  README  UVS_45total.txt  mirrorDimensions  mirrorDimensionsAdvanced.cpp  pullgitinfo.py  qe.txt  qsim.cc  qsimDetectorConstruction.cc  qsimDetectorConstruction.hh  qsimDetectorConstruction_Moller_Mainz_updated_materials.cc  qsimMessenger.cc  qsimMessenger.hh  qsimOpticalPhysics.cc  qsimOpticalPhysics.hh  qsimPrimaryGeneratorAction.hh  qsimRunAction.cc  qsimScintDetector.cc  qsimScintDetectorHit.hh  rootlogon.C  variables.txt
analysis/: analyze.sh  convert_layer  convert_layer.cc  layer  layer.cc  makefile  plot  plot.cc  readme.md  z  z.cc
geometry_generator/: README.txt  mirrorDimensions.cpp  perlInstructions.txt  translateSHMX.pl
geometry_perl/: Parameters.csv  data.txt  definitionsNew.xml  detector.gdml  detector_.gdml  detector_1.gdml  detector_materials.gdml  detector_parametrized.gdml  detector_single.gdml  detector_spaced.gdml  gdmlGenerator.pl  gdmlGenerator1.pl  gdmlGeneratorRotStagger.pl  gdmlGeneratorRotStagger2.pl  gdmlGeneratorRotStagger8.pl  gdmlGeneratorRotStagger9.pl  gdmlGeneratorRotStaggerNew.pl  hallDaughter.gdml  matrices_materials.xml  p.csv  qsimMother.gdml  solids.xml  solidsNew.xml  solids_materials.xml  solids_single.xml  solids_spaced.xml  upstreamDaughter_merged_design1_check3.gdml
include/: qsimDetector.hh  qsimDetectorConstruction.hh  qsimDetectorHit.hh  qsimEvent.hh  qsimEventAction.hh  qsimGenericDetector.hh  qsimGenericDetectorHit.hh  qsimGenericDetectorSum.hh  qsimIO.hh  qsimLinkDef.h  qsimMessenger.hh  qsimMonitorDetector.hh  qsimMonitorDetectorHit.hh  qsimOpticalPhysics.hh  qsimPrimaryGeneratorAction.hh  qsimRun.hh  qsimRunAction.hh  qsimRunData.hh  qsimScintDetector.hh  qsimSteppingAction.hh  qsimTextFile.hh  qsimtypes.hh
macros/: batchexample.mac  batchrun.mac  blackening.mac  get_pe.C  handler.sh  handler_1.sh  preserve.mac  qsim.sh  runexample.mac  runscript.sh  vis.mac  vis_brad.mac  vis_run.mac
src/: .qsimDetectorConstruction.cc.swo  \  new-qsimPrimaryGeneratorAction.cc  qsimDetector.cc  qsimDetectorConstruction-config1A.cc  qsimDetectorConstruction.cc  qsimDetectorConstruction_Moller_Mainz.cc  qsimDetectorHit.cc  qsimEvent.cc  qsimEventAction.cc  qsimGenericDetector.cc  qsimGenericDetectorHit.cc  qsimGenericDetectorSum.cc  qsimIO.cc  qsimMessenger.cc  qsimMonitorDetector.cc  qsimMonitorDetectorHit.cc  qsimOpticalPhysics.cc  qsimPrimaryGeneratorAction.cc  qsimRun.cc  qsimRunAction.cc  qsimRunData.cc  qsimScintDetector.cc  qsimScintDetectorHit.cc  qsimSteppingAction.cc  qsimTextFile.cc
vis/: OIX.mac  Qt.mac  vis.mac
